# ntpu-social-data-analysis

./: main.py  midterm_1_copy.html  pyproject.toml
data/: brilliant_working.sav  final.sav  midterm_1.sav  practice_01.txt
example/: complete_anova_and_post_hoc.py
notebooks/: 20250927_homework.html  20250927_homework.ipynb  20251004_homework.html  20251004_homework.ipynb  20251018_homework.html  20251018_homework.ipynb  20251025_homework.html  20251025_homework.ipynb  20251108_homework.html  20251108_homework.ipynb  20251122_homework.html  20251122_homework.ipynb  20251206_homework.html  20251206_homework.ipynb  20251213_homework.html  20251213_homework.ipynb  20251220_homework.html  20251220_homework.ipynb  20251220_in_class.ipynb  bonus.html  bonus.ipynb  final.html  final.ipynb  load_txt.ipynb  midterm_1.html  midterm_1.ipynb  poc.ipynb  show_table.ipynb
notebooks/.ipynb_checkpoints/: 20250927_homework-checkpoint.ipynb  20251004_homework-checkpoint.ipynb  20251018_homework-checkpoint.ipynb  20251025_homework-checkpoint.ipynb  20251108_homework-checkpoint.ipynb  20251122_homework-checkpoint.ipynb  20251206_homework-checkpoint.ipynb  20251213_homework-checkpoint.ipynb  20251220_homework-checkpoint.ipynb  bonus-checkpoint.ipynb  final-checkpoint.ipynb  load_sav_file-checkpoint.ipynb  load_txt_and_naive_analysis-checkpoint.ipynb  midterm_1-checkpoint.ipynb
src/: load.py  mock.py
src/plot/: distribution.py  scatter.py
src/statistic/: anova.py  categorical_data.py  chi_squared_test.py  correlation.py  describe.py  distribution.py  linear_regression.py  pearson.py  (+3 more)
(+3 files in other folders)
